kubernetes/apps/services/nextcloud/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/instance: nextcloud
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: kgateway-internal
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # PostgreSQL (CloudNative-PG pg18vec)
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: database
            cnpg.io/cluster: pg18vec
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    # Dragonfly (Redis-kompatibler Cache)
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: database
            app.kubernetes.io/part-of: dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    # NFS-Server
    - toCIDR:
        - 10.100.0.81/32
      toPorts:
        - ports:
            - port: "2049"
              protocol: TCP
    # OIDC-Provider (Pocket ID)
    - toFQDNs:
        - matchName: id.ds47.dev
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
